# flutter_libtransmission

./: .gitignore  .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-example.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml  vcpkg.json
example/android/: .gitignore
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/gray/libtransmission/flutter_libtransmission_example/: MainActivity.kt
example/integration_test/: flutter_libtransmission_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  transmission.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_libtransmission.podspec
lib/: flutter_libtransmission.dart  flutter_libtransmission_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_libtransmission.podspec
macos/Classes/: flutter_libtransmission.cc
src/: CMakeLists.txt  VcpkgAndroid.cmake  flutter_libtransmission.c  flutter_libtransmission.cc  flutter_libtransmission.h  ios.toolchain.cmake  macos.toolchain.cmake
src/patches/: libpsl-source-date-epoch.patch
windows/: CMakeLists.txt
